--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:icon="@drawable/zip_utility"
         android:label="@string/app_name"
         android:foregroundServiceType="dataSync|location"
+        android:requestLegacyExternalStorage="true"
         android:theme="@style/Main" >
         <activity
             android:name=".ActivityMain"
