--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ android {
 
 dependencies {
     implementation files('libs/Utilities3-1.0.1.aar')
+    implementation files('libs/commons-compress-1.20.jar')
+    implementation files('libs/xz-1.8.jar')
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.2'
 
