--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ android {
 
                         task copyDebugApk(type: Copy) {
                             from 'build/outputs/apk/debug'
-                            into '../debug_apk/' // Into the project root, one level above the app folder
+                            into '../release/' // Into the project root, one level above the app folder
                             include '**/*debug.apk'
                         }
 
