--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,11 +75,12 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+//    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'com.google.android.material:material:1.2.0'
+
     implementation files('libs/Utilities3-1.0.2.aar')
     implementation files('libs/commons-compress-1.20.jar')
     implementation files('libs/xz-1.8.jar')
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.0.2'
 
-    implementation 'com.google.android.material:material:1.2.0-alpha05'
 }
