--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,9 @@ dependencies {
     implementation files('libs/commons-compress-1.20.jar')
     implementation files('libs/xz-1.8.jar')
 
+    implementation 'androidx.activity:activity:1.2.0-alpha02'
+    def fragment_version = "1.3.0-alpha04"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    implementation "androidx.core:core-ktx:+"
+
 }
