--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.0"
+        classpath 'com.android.tools.build:gradle:4.1.3'
 //        classpath 'com.android.tools.build:gradle:4.0.1'
 //        classpath 'com.android.tools.build:gradle:3.5.0'
 //        classpath 'com.android.tools.build:gradle:3.5.3'
