--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    compileSdkVersion 30
+    buildToolsVersion "30.0.3"
     defaultConfig {
         applicationId "com.sentaroh.android.ZipUtility3"
         minSdkVersion 26
-        targetSdkVersion 29
+        targetSdkVersion 30
 
         versionCode 32
         versionName "1.31"
@@ -83,9 +83,11 @@ dependencies {
     implementation files('libs/commons-compress-1.20.jar')
     implementation files('libs/xz-1.8.jar')
 
-    implementation 'androidx.activity:activity:1.2.0-alpha02'
-    def fragment_version = "1.3.0-alpha04"
-    implementation "androidx.fragment:fragment-ktx:$fragment_version"
-    implementation "androidx.core:core-ktx:+"
+    implementation files('libs/MarkDownJ_0.4.jar')
+
+//    implementation 'androidx.activity:activity:1.2.0-alpha02'
+//    def fragment_version = "1.3.0-alpha04"
+//    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+//    implementation "androidx.core:core-ktx:+"
 
 }
